-Tag combobox now expands to give suggestions for tags also when using more
 than one tag (patch by Emilian Mihalache)

Android 20160502:

-Upgraded backend to Mnemosyne 2.3.6, meaning that logs older than 1 year
 are now automatically archived in a separate file, which is not backed 
 up all the time, speeding up the sync process and taking less space.
-Switched to Material design, also making it easier to access the menu on 
 some devices which had problems with this before.
-Implemented full screen immersive mode for Android KitKat and higher.
-Buttons are now in the middle of the screen to better facilitate
 ergonomic one-handed operation.

Mnemosyne 2.3.6 : 2016-05-02

-Logs older than 1 year are now automatically archived in a separate file,
 which is not backed up all the time, speeding up e.g. the sync process.
-The card browser now supports more html formatting, e.g. ruby tags. 
-URLs in cards in the review widget now open in an external browser, rather 
 than the internal Qt webview which does not have back buttons e.g..
-Only changing a card type in the 'Edit current card' dialog now works again
 (reported by Henrik).
-Failed cards no longer are listed as overdue in the card browser (requested
 by Samuel Innes)
-Fixed bugs related to Unicode filenames under Android (reported by Jan 
 Egil Hagen). 
-When adding a tag with the same name both on client and server before 
 syncing, rename one of these tags. Users still need to unify and activate
 the tags though (reported by Jan Egil Hagen). 
-Added a --version command line argument to display the version (requested by
 Matthew Exon).
-Also accept files with *.tsv extention when importing tab-separated data
 (requested by Ojas A). 
-Don't leave the 'Client Logging in...'' dialog on the sync server open in 
 case the client provides a wrong password (reported by Eric).
-Fixed formatting when using 'db_media:///' in cards with javascript (
 reported by Pete Kovalenko).


Mnemosyne 2.3.5 : 2015-12-07
