@@ -53,8 +53,6 @@ class ServerThread(QtCore.QThread, WebServer):
     def __init__(self, **kwds):
         super().__init__(**kwds)
         self.server_has_connection = False
-        # A fast moving progress bar seems to cause crashes on Windows.
-        self.show_numeric_progress_bar = True #(sys.platform != "win32")
 
     def run(self):
         try:
@@ -141,20 +139,16 @@ class ServerThread(QtCore.QThread, WebServer):
         self.set_progress_text_signal.emit(text)
 
     def set_progress_range(self, maximum):
-        if self.show_numeric_progress_bar:
-            self.set_progress_range_signal.emit(maximum)
+        self.set_progress_range_signal.emit(maximum)
 
     def set_progress_update_interval(self, value):
-        if self.show_numeric_progress_bar:
-            self.set_progress_update_interval_signal.emit(value)
+        self.set_progress_update_interval_signal.emit(value)
 
     def increase_progress(self, value):
-        if self.show_numeric_progress_bar:
-            self.increase_progress_signal.emit(value)
+        self.increase_progress_signal.emit(value)
 
     def set_progress_value(self, value):
-        if self.show_numeric_progress_bar:
-            self.set_progress_value_signal.emit(value)
+        self.set_progress_value_signal.emit(value)
 
     def close_progress(self):
         self.close_progress_signal.emit()
