@@ -1,3 +1,10 @@
+-Upgraded all code to Python3 and PyQt5, so that Mnemosyne no longer
+ depends on libraries which are gradually becoming unsupported.
+-The move to PyQt5 enabled to show progress bars with percentages for
+ certain long operations like initial sync.
+-New command line option "--high-dpi-scaling" to enable scaling for displays
+ with high DPI values. Not enabled by default because it can cause some
+ issues with multiple connected displays.
 -Tag combobox now expands to give suggestions for tags also when using more
  than one tag (patch by Emilian Mihalache)
 
